Added rules modal

--- a/index.html
+++ b/index.html
@@ -15,30 +15,49 @@
 </head>
 <body>
 
-<div class="wrapper">
+  <div class="overlay"></div>
 
-  <header>
-    <img src="images/logo.svg" height="99" width="162" alt="logo" class="logo">
-    <div class="score">
-      <p class="score_title">score</p>
-      <p class="score_number">12</p>
+  <div class="wrapper">
+
+    <header>
+      <img src="images/logo.svg" height="99" width="162" alt="logo" class="logo">
+      <div class="score">
+        <p class="score_title">score</p>
+        <p class="score_number">12</p>
+      </div>
+
+    </header>
+
+    <main>
+
+      <div class="playground">
+        <a href="#" class="button"> <img src="images/rock.png" alt="" class="rock"  id="r"></a>
+        <a href="#" class="button"> <img src="images/scissors.png" alt="" class="scissors" id="s"></a>
+        <a href="#" class="button"> <img src="images/paper.png" alt="" class="paper" id="p"></a>
+      </div>
+
+    </main>
+
+  </div>
+
+
+  <a href="#" class="rules">
+    Rules
+  </a>
+
+  <div class="modal">
+
+    <div class="modal_header">
+      <h4 class="rules_title">Rules</h4>
+      <a class="close_modal">
+        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0 0 24 24">
+<path d="M 4.7070312 3.2929688 L 3.2929688 4.7070312 L 10.585938 12 L 3.2929688 19.292969 L 4.7070312 20.707031 L 12 13.414062 L 19.292969 20.707031 L 20.707031 19.292969 L 13.414062 12 L 20.707031 4.7070312 L 19.292969 3.2929688 L 12 10.585938 L 4.7070312 3.2929688 z"></path>
+</svg>
+      </a>
     </div>
 
-  </header>
-
-  <main>
-
-    <div class="playground">
-      <a href="#" class="button"> <img src="images/rock.png" alt="" class="rock"  id="r"></a>
-      <a href="#" class="button"> <img src="images/scissors.png" alt="" class="scissors" id="s"></a>
-      <a href="#" class="button"> <img src="images/paper.png" alt="" class="paper" id="p"></a>
-    </div>
-
-  </main>
-
-</div>
-
-
+    <img src="images/image-rules.svg" alt="rules" height="270" width="304">
+  </div>
   
   <!--<div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
