Added animation keyframes

--- a/index.html
+++ b/index.html
@@ -31,9 +31,23 @@
     <main>
 
       <div class="playground">
-        <a href="#" class="button"> <img src="images/rock.png" alt="" class="rock"  id="r"></a>
-        <a href="#" class="button"> <img src="images/scissors.png" alt="" class="scissors" id="s"></a>
-        <a href="#" class="button"> <img src="images/paper.png" alt="" class="paper" id="p"></a>
+          <a href="#" class="button"> <img src="images/rock.png" alt="" class="rock"  id="r"></a>
+          <a href="#" class="button"> <img src="images/scissors.png" alt="" class="scissors" id="s"></a>
+          <a href="#" class="button"> <img src="images/paper.png" alt="" class="paper" id="p"></a>
+      </div>
+
+      <div class="battle">
+        <div class="yours">
+          <p>You Picked</p>
+          <img src="" alt="" class="yourChoiceImg" width="200" height="200">
+        </div>
+        <div class="theirs">
+          <p>The House Picked</p>
+          <span class="darkcircle"></span>
+          <img src="" alt="" class="theirChoiceImg" width="200" height="200">
+
+        </div>
+
       </div>
 
     </main>
