Added glow effect and reload btn

--- a/index.html
+++ b/index.html
@@ -39,16 +39,32 @@
       <div class="battle">
         <div class="yours">
           <p>You Picked</p>
-          <img src="" alt="" class="yourChoiceImg" width="200" height="200">
+          <div class="yourImg">
+            <img src="" alt="" class="yourChoiceImg" width="200" height="200">
+            <span id="youWinGlow" class=""></span>
+          </div>
+
         </div>
+
+
+        <div class="verdict">
+          <p class="verdict_text"></p>
+          <a href="" class="verdict_btn" id="playAgainBtn">Play again</a>
+        </div>
+
         <div class="theirs">
           <p>The House Picked</p>
-          <span class="darkcircle"></span>
-          <img src="" alt="" class="theirChoiceImg" width="200" height="200">
 
+          <span class="darkcircle"></span>
+          <div class="theirImg">
+          <img src="" alt="" class="theirChoiceImg" width="200" height="200">
+            <span id="theyWinGlow" class=""></span>
+
+          </div>
         </div>
 
       </div>
+
 
     </main>
 
